{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 21,
  "lineage": "d14c7ae2-6318-2fa2-3a4e-9148f0de2cd1",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009c17dd911e5aa56",
            "domain": "vpc",
            "id": "eipalloc-009c17dd911e5aa56",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-139-185-41.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.185.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Asteovskiy_vpc-default-us-east-2a"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "Asteovskiy_vpc-default-us-east-2a",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:internet-gateway/igw-0f131411df225c3a9",
            "id": "igw-0f131411df225c3a9",
            "owner_id": "335809563306",
            "tags": {
              "Name": "Asteovskiy_vpc-default"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "Asteovskiy_vpc-default",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0277325cf719c7584"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009c17dd911e5aa56",
            "connectivity_type": "public",
            "id": "nat-0f634f948bdfa96d0",
            "network_interface_id": "eni-0864e555d503671b3",
            "private_ip": "10.36.18.80",
            "public_ip": "3.139.185.41",
            "subnet_id": "subnet-0894166b901bf685f",
            "tags": {
              "Name": "Asteovskiy_vpc-default-us-east-2a"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "Asteovskiy_vpc-default-us-east-2a",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04ecd93fab5008f221080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f634f948bdfa96d0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04ecd93fab5008f22",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f131411df225c3a9",
            "id": "r-rtb-021d4645e7e9ad5641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-021d4645e7e9ad564",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:route-table/rtb-04ecd93fab5008f22",
            "id": "rtb-04ecd93fab5008f22",
            "owner_id": "335809563306",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Asteovskiy_vpc-default-private"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "Asteovskiy_vpc-default-private",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0277325cf719c7584"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:route-table/rtb-021d4645e7e9ad564",
            "id": "rtb-021d4645e7e9ad564",
            "owner_id": "335809563306",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Asteovskiy_vpc-default-public"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "Asteovskiy_vpc-default-public",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0277325cf719c7584"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c2ac71a0cca3879",
            "route_table_id": "rtb-04ecd93fab5008f22",
            "subnet_id": "subnet-04ba6f9ea6d454d9c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b92d68e6c2e6613d",
            "route_table_id": "rtb-04ecd93fab5008f22",
            "subnet_id": "subnet-03299ecb82a5b2ea9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6d522dcc1f4b096",
            "route_table_id": "rtb-04ecd93fab5008f22",
            "subnet_id": "subnet-0f9f835fac0dbcc13"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007bfc861e85a4bee",
            "route_table_id": "rtb-021d4645e7e9ad564",
            "subnet_id": "subnet-0894166b901bf685f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0812868d5076877e2",
            "route_table_id": "rtb-021d4645e7e9ad564",
            "subnet_id": "subnet-0fdf492ef2a8ff63a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0400df53f73229775",
            "route_table_id": "rtb-021d4645e7e9ad564",
            "subnet_id": "subnet-0a82e8c091cf0b6e3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:subnet/subnet-04ba6f9ea6d454d9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.36.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ba6f9ea6d454d9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335809563306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Asteovskiy_vpc-default-private-us-east-2a"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "Asteovskiy_vpc-default-private-us-east-2a",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0277325cf719c7584"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:subnet/subnet-03299ecb82a5b2ea9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.36.128.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03299ecb82a5b2ea9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335809563306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Asteovskiy_vpc-default-private-us-east-2b"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "Asteovskiy_vpc-default-private-us-east-2b",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0277325cf719c7584"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:subnet/subnet-0f9f835fac0dbcc13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.36.160.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9f835fac0dbcc13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335809563306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Asteovskiy_vpc-default-private-us-east-2c"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "Asteovskiy_vpc-default-private-us-east-2c",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0277325cf719c7584"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:subnet/subnet-0894166b901bf685f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.36.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0894166b901bf685f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "335809563306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Asteovskiy_vpc-default-public-us-east-2a"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "Asteovskiy_vpc-default-public-us-east-2a",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0277325cf719c7584"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:subnet/subnet-0fdf492ef2a8ff63a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.36.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdf492ef2a8ff63a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "335809563306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Asteovskiy_vpc-default-public-us-east-2b"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "Asteovskiy_vpc-default-public-us-east-2b",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0277325cf719c7584"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:subnet/subnet-0a82e8c091cf0b6e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.36.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a82e8c091cf0b6e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "335809563306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Asteovskiy_vpc-default-public-us-east-2c"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "Asteovskiy_vpc-default-public-us-east-2c",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0277325cf719c7584"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:335809563306:vpc/vpc-0277325cf719c7584",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.36.0.0/16",
            "default_network_acl_id": "acl-0d3e7664c1489f9b3",
            "default_route_table_id": "rtb-0aff3b398c741d75c",
            "default_security_group_id": "sg-02ea88f26c79088a9",
            "dhcp_options_id": "dopt-07ebeb9c52a7d85a9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0277325cf719c7584",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aff3b398c741d75c",
            "owner_id": "335809563306",
            "tags": {
              "Name": "Asteovskiy_vpc-default"
            },
            "tags_all": {
              "Environment": "default",
              "Name": "Asteovskiy_vpc-default",
              "Project": "Lesson_44_Practice",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}